# lab5

./: .gitignore  Accelerator.hpp  CMakeLists.txt  FixedCharge.cpp  FixedCharge.hpp  Particle.cpp  ParticleStream.hpp  Physics.cpp  Physics.hpp  main.cpp
LAB2/: CMakeLists.txt  arraysequence.hpp  arraysequence.tpp  dynamicarray.hpp  dynamicarray.tpp  icollection.hpp  ienumerable.hpp  ienumerator.hpp  immutable_array_sequence.hpp  isequencebuilder.hpp  main.cpp  mutable_array_sequence.hpp  sequence.hpp  sequence.tpp  sequencebuilder.hpp
app/: FixedChargeRenderer.hpp  ParticleRenderer.hpp  ParticleStreamRenderer.hpp  SFMLRender.hpp  main.cpp
src/: Accelerator.cpp  Accelerator.hpp  FixedCharge.cpp  FixedCharge.hpp  GUITheme.hpp  Particle.cpp  Particle.hpp  ParticleStream.hpp  Physics.cpp  Physics.hpp  PhysicsScale.hpp
